feat: add last/next bookings to owner item views
- extend item service to load last and next approved bookings
- add owner-specific item DTO with booking dates
- update item controller to return enriched data for owners